--- a/_data/gpgc.yml
+++ b/_data/gpgc.yml
@@ -1,8 +1,8 @@
-repo_owner: __your_github_username__
-repo_name: __your_github_repository__
+repo_owner: wireddown
+repo_name: gpgc-test
 use_show_action: false
 label_name: Post Comments
-label_color: 666666
+label_color: aa759f
 github_application:
   client_id: 0ef5ca17b24db4e46807
   code_authenticator: https://ghpages-ghcomments.herokuapp.com/authenticate/
